--- a/00_startcamp/마크다운 실습.md
+++ b/00_startcamp/마크다운 실습.md
@@ -103,7 +103,7 @@ ex) [네이버](https://www.naver.com)
 ![이미지가 없을 시 표시될 문자열](IMG_URL)
 ```
 
-![ssafy](./ssafy.png)  
+![ssafy](https://www.google.com/imgres?imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D2565410346813944&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fhellossafy%2F&tbnid=rVPHGLenMc_tIM&vet=12ahUKEwjP9_TJhMH8AhUGft4KHdN7BIkQMygAegUIARDHAQ..i&docid=AhsLDcuE6TYqpM&w=2048&h=1187&q=ssafy&ved=2ahUKEwjP9_TJhMH8AhUGft4KHdN7BIkQMygAegUIARDHAQ)  
 ![ssafy사진 없음](./false.png)
 
 <br/>
